# iLovePrivacyPDF

./: .gitignore  ELECTRON_GUIDE.md  LICENSE  README.md  build-electron.sh  install.sh  run-electron.sh  run.sh  stop.sh
ocr-app/: .gitignore  generate_icons.js  next.config.ts  package.json  post-build.js
ocr-app/app/: globals.css  layout.tsx  page.tsx
ocr-app/app/api/check-files/: route.ts
ocr-app/app/api/convert-image/: route.ts
ocr-app/app/api/convert-markdown/: route.ts
ocr-app/app/api/dependencies/: route.ts
ocr-app/app/api/history/: route.ts
ocr-app/app/api/images-to-pdf/: route.ts
ocr-app/app/api/merge-pdfs/: route.ts
ocr-app/app/api/models/: route.ts
ocr-app/app/api/pdf-info/: route.ts
ocr-app/app/api/pdf-to-images/: route.ts
ocr-app/app/api/process/: route.ts
ocr-app/app/api/process-stream/: route.ts
ocr-app/app/api/pull-model/: route.ts
ocr-app/app/api/serve-image/: route.ts
ocr-app/app/api/split-pdf/: route.ts
ocr-app/electron/: main.js  preload.js
ocr-app/lib/: dependencies.ts  paths.ts  rust-binary.ts
ocr-app/public/: icon.icns
ocr-app/public/outputs/: .gitkeep
ocr-rust/: Cargo.toml
ocr-rust/src/: main.rs
