[package]
name = "iloveprivacypdf"
version = "1.0.0"
edition = "2021"
description = "Privacy-first document processing engine - local OCR and PDF manipulation"
authors = ["Roberto <enquiriesroberto@myneuronal.com>"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = "0.25"
pdf-extract = "0.7"
printpdf = "0.7"
lopdf = "0.32"
regex = "1.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
